--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>hoy trabajamos con github</h1>
     <p>comision 37410</p>
+    <img src=".//img/aventura.jpg" alt="">
 </body>
 </html>
